# EsempioGnomeApp

./: README.md  meson.build  org.altervista.ReaLoGiCMaN.json
data/: meson.build  org.altervista.ReaLoGiCMaN.desktop.in  org.altervista.ReaLoGiCMaN.gschema.xml  org.altervista.ReaLoGiCMaN.metainfo.xml.in  org.altervista.ReaLoGiCMaN.service.in
data/icons/: meson.build
po/: POTFILES.in  meson.build
risorse_app/: meson.build  webbrowser.py
risorse_app/risorse/: Leggimi.txt  video.webm
src/: main.py  meson.build  realogicman.gresource.xml  realogicman.in  window.cmb  window.py  window.ui
src/gtk/: web-browser.py
